# Nivetti-Internship

MaliciousFileDetection/: CMakeLists.txt  Tutorial-HelloWorld  analyze_pcap.cpp  app.py  detectMalware_15Aug2024.cpp  extract_http_hashes  extract_http_hashes.cpp  response.pcap  test  test-app  test.cpp
MaliciousFileDetection/PacketParsing/: CMakeLists.txt  PacketParsing  filedownloadpcap.pcap  packetparsing.cpp  testpcap.pcap
MaliciousFileDetection/templates/: index.html
pcaplusplus_trial/: CMakeLists.txt  example-app  httpPackets.pcap  main.cpp
